# tinymod

./: .gitignore  Dockerfile.dev  NOTICE  README.md  docker-compose.yaml  flake.nix  pyproject.toml
.github/workflows/: static.yml
assets/ro_tags/: abstraction_stack.md  metal.md  quickstart.md
hata/discord/channel/channel_metadata/tests/: test__parse_flags.py  test__put_topic_into.py
hata/discord/component/component_metadata/tests/: test__put_value_into.py  test__validate_label.py
hata/discord/component/tests/: test__put_emoji_into.py
hata/discord/guild/guild/tests/: test__validate_channels.py  test__validate_roles.py
hata/discord/guild/welcome_screen_channel/tests/: test__validate_emoji.py
hata/discord/interaction/interaction_event/tests/: test__parse_guild_locale.py  test__parse_message.py  test__validate_guild_locale.py  test__validate_message.py
hata/discord/interaction/interaction_metadata/tests/: test__put_resolved_into.py  test__validate_resolved.py
hata/discord/poll/poll_result/: poll_result.py
hata/discord/soundboard/: __init__.py
hata/discord/user/user/tests/: test__put_flags_into.py
stats/: common.css  header.css  index.css  index.html  index.js  stats.css  stats.js
tinymod/: __main__.py
tinymod/common/: benchmarks.py  helpers.py
tinymod/plugins/: benchmarks.py  code_metrics.py  commit_chart.py  easy_github_contribution.py  linker.py  logging.py  moderation_menu.py  questions.py  ro_tags.py  unique_roles.py  utility_commands.py  verification.py  voice.py
tinymod/stats/: api.py  cached_benchmarks.py
tools/: dump_messages.py
(+1 files in other folders)
