[tool.poetry]
name = "tinymod"
version = "0.1.0"
description = "tinygrad's premier discord moderation bot"
authors = ["Woze Parrot <wozeparrot@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
hata = {extras = ["voice"], version = "^1.3.32"}
python-dotenv = "^1.0.0"
pygithub = "^1.59.0"
aiosqlite = "^0.19.0"
inotify-simple = "^1.3.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
