[tool.poetry]
name = "tinymod"
version = "0.1.0"
description = "tinygrad's premier discord moderation bot"
authors = ["Woze Parrot <wozeparrot@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
python-dotenv = "^1.0.0"
pygithub = "^1.59.0"
aiosqlite = "^0.19.0"
inotify-simple = "^1.3.5"
pygal = "^3.0.0"
cairosvg = "^2.7.1"
scarletio = "^1.0.62"
cryptography = "41.0.4"
numpy = "^1.26.4"
prettytable = "^3.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
